%% title: ERD 04b2 - Traceability / Comment
%% Module: SIC Requirement / Analysis / Design (part 2 of 2, see erd-04b1-changerequest-review.mmd for Change Request/Design Review)
%% NOTE: All entities extend BaseEntity or BaseBusinessEntity (Lombok @Data), which contribute these audit/base
%%       columns not repeated per-entity below: id (PK, UUID), created_by, created_date, updated_by, updated_date,
%%       is_delete, delete_by, delete_date, rowVersion (xmin). BaseBusinessEntity additionally adds business_id (UUID).
%%       Only business-specific columns are listed in each entity box.
%% NOTE on PmTraceLink / PmComment:
%%       these use POLYMORPHIC association pairs (a "*_type" string column + a "*_id" UUID column) instead of a
%%       real FK to one table, so the same column pair can point at PmRequirement, PmDiagramTab, PmSpecification,
%%       PmTestCase, PmTask, PmBug, etc. depending on the value of *_type. Mermaid cannot express "one column set,
%%       many possible target tables" as a real FK, so these are drawn as dashed/non-identifying relationships
%%       (`..`) to each documented candidate target, labelled "polymorphic". This is the most accurate
%%       representation without inventing a constraint that does not exist in the schema.
%% NOTE: Relationships marked "(inferred)" come from a plain *_id UUID column with FK naming convention but NO
%%       @ManyToOne/@JoinColumn mapping in the Java source. Relationships marked "(mapped)" are real @ManyToOne.

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PmTraceLink {
        UUID id
        uuid project_id
        string source_type
        uuid source_id
        string target_type
        uuid target_id
        enum relationship_type
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    TraceRelationship {
        enum DESIGNED_BY
        enum IMPLEMENTED_BY
        enum DOCUMENTED_BY
        enum VERIFIED_BY
        enum FAILED_BY
        enum AFFECTED_BY
        enum RELATED_TO
    }

    PmComment {
        UUID id
        UUID business_id
        string target_type
        uuid target_id
        uuid parent_comment_id
        string subject
        text content
        uuid attachment_group_id
        boolean is_decision
        boolean is_question
        boolean is_resolved
        boolean pinned
        string mention_user_id
        jsonb extra_data
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmComment ||--o{ PmComment : "has replies (parent_comment_id, self-ref)"

    PmTraceLink }o--|| TraceRelationship : "relationship_type (enum)"

